Enhance responsive design across multiple components by adding media queries for improved layout on screens smaller than 768px. Adjust styles in App.css, businessHour.css, customerReview.css, heroCarousel.css, newMenu.css, and reservePage.css to ensure better usability and visual consistency on mobile devices.

--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,12 @@
 .polariod img {
   max-width: 100%;
 }
+
+@media (max-width: 768px) {
+  body{
+    min-width: 360px;
+  }
+  .section h2 {
+    font-size: 2.5em;
+  }
+}
